Fix experiment names overflowing in plots ribbon (#1821)

--- a/webview/src/plots/components/ribbon/styles.module.scss
+++ b/webview/src/plots/components/ribbon/styles.module.scss
@@ -24,6 +24,7 @@
   border: none;
   text-align: left;
   color: $fg-color;
+  min-width: max-content;
 
   span {
     display: block;
@@ -56,6 +57,7 @@
   border-bottom: 1px solid $border-color;
   padding: 10px 15px;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .addButtonWrapper {
